--- a/package.json
+++ b/package.json
@@ -3,12 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "@mui/styles": "^5.8.4",
@@ -17,6 +11,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "cloudinary-react": "^1.8.0",
+    "compressorjs": "^1.1.1",
     "date-fns": "^2.28.0",
     "firebase": "^9.8.3",
     "i": "^0.3.7",
@@ -24,10 +20,11 @@
     "moment": "^2.29.3",
     "npm": "^8.12.1",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.8.4",
     "react-cssfx-loading": "^1.1.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.32.2",
     "react-hook-speech-to-text": "^0.8.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
